# jobDataScraperBackend

./: .gitignore  .replit  Dockerfile  main.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt
ofertapune_profile/: Local State
ofertapune_profile/Default/: BrowsingTopicsState  DIPS  Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data  passkey_enclave_state
ofertapune_profile/Default/DawnGraphiteCache/: data_1  index
ofertapune_profile/Default/DawnWebGPUCache/: data_1  index
ofertapune_profile/Default/Extension Rules/: LOG
ofertapune_profile/Default/Extension Scripts/: LOG
ofertapune_profile/Default/Extension State/: LOG  LOG.old
ofertapune_profile/Default/GCM Store/: LOG  LOG.old
ofertapune_profile/Default/GPUCache/: data_1  index
ofertapune_profile/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
ofertapune_profile/Default/Session Storage/: LOG  LOG.old
ofertapune_profile/Default/Sessions/: Session_13407939996212171  Session_13407940361570757  Tabs_13407939996322704  Tabs_13407940361657144
ofertapune_profile/Default/Site Characteristics Database/: LOG  LOG.old
ofertapune_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  index
ofertapune_profile/GraphiteDawnCache/: data_1  index
ofertapune_profile/ShaderCache/: data_1  index
ofertapune_profile/segmentation_platform/: ukm_db
templates/: base.html  login.html  results.html  scraping_progress.html  select_url.html  welcome.html
(+57 files in other folders)
